tests/semantic/pass/assign2assign.c
int main(void) {
  int a;
  int b;
  a = b = 0;
  return a;
}
