tests/semantic/fail/invalidAssignment.c
int main(void) {
  int a;
  a = 0;
  (a == 0) = 1;
  return 0;
}
